--- a/weather/Base.lproj/Main.storyboard
+++ b/weather/Base.lproj/Main.storyboard
@@ -1,25 +1,221 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ySs-8F-Cj0">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Settings-->
+        <scene sceneID="zt2-gC-MDm">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <navigationController id="akg-nv-pLT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Settings" image="tabbar_settings" id="gMW-Yu-xO5"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" shadowImage="today_line" id="alr-Cb-XVk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="zJs-D3-7k5" kind="relationship" relationship="rootViewController" id="CYv-07-K8T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Mi-bC-TNZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="994" y="1167"/>
+        </scene>
+        <!--Forecast-->
+        <scene sceneID="ESs-T2-hBo">
+            <objects>
+                <navigationController id="NnJ-Ui-4Ag" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Forecast" image="tabbar_forecast" id="eFt-jU-LTQ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="l0i-mO-3S7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="JRM-hf-dYi" kind="relationship" relationship="rootViewController" id="BsX-wh-VZE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ofu-kK-fPz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="994" y="518"/>
+        </scene>
+        <!--Today-->
+        <scene sceneID="uSL-mh-1dU">
+            <objects>
+                <navigationController id="ggU-QR-2t5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Today" image="tabbar_today" id="WgK-iG-Iya"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9UN-Kl-UV8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eOl-4l-jmY" kind="relationship" relationship="rootViewController" id="LTu-AE-v8w"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qds-nw-B6M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="994" y="-132"/>
+        </scene>
+        <!--Forecast-->
+        <scene sceneID="z5h-eh-Ulp">
+            <objects>
+                <viewController id="JRM-hf-dYi" customClass="WTHForecastViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="uZh-rd-ZUS"/>
+                        <viewControllerLayoutGuide type="bottom" id="hJA-V2-bLt"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="A70-CS-sd4">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="today_line" translatesAutoresizingMaskIntoConstraints="NO" id="d5f-cs-Trs">
+                                <rect key="frame" x="0.0" y="64" width="600" height="2"/>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="d5f-cs-Trs" firstAttribute="leading" secondItem="A70-CS-sd4" secondAttribute="leading" id="AgW-FD-9bE"/>
+                            <constraint firstItem="d5f-cs-Trs" firstAttribute="top" secondItem="uZh-rd-ZUS" secondAttribute="bottom" id="K1Q-Wa-nGi"/>
+                            <constraint firstAttribute="trailing" secondItem="d5f-cs-Trs" secondAttribute="trailing" id="Uap-LG-bRa"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Forecast" image="tabbar_forecast" id="Meh-Cd-LST"/>
+                    <navigationItem key="navigationItem" id="5Pp-a2-ieX"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k19-0r-Utw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1657" y="518"/>
+        </scene>
+        <!--Today-->
+        <scene sceneID="Egh-aR-YNm">
+            <objects>
+                <viewController id="eOl-4l-jmY" customClass="WTHTodayViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cNc-St-wy3"/>
+                        <viewControllerLayoutGuide type="bottom" id="ohi-Fw-9yC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pkH-LU-02Z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="today_line" translatesAutoresizingMaskIntoConstraints="NO" id="Zcn-cT-16c">
+                                <rect key="frame" x="0.0" y="64" width="600" height="2"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Zcn-cT-16c" firstAttribute="leading" secondItem="pkH-LU-02Z" secondAttribute="leading" id="0ya-GB-LFH"/>
+                            <constraint firstItem="Zcn-cT-16c" firstAttribute="top" secondItem="cNc-St-wy3" secondAttribute="bottom" id="A3c-Yf-VM4"/>
+                            <constraint firstAttribute="trailing" secondItem="Zcn-cT-16c" secondAttribute="trailing" id="S5k-qp-QbX"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Today" image="tabbar_today" id="uE9-yy-hzW"/>
+                    <navigationItem key="navigationItem" id="17z-os-mCi"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ma2-fw-Grt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1657" y="-132"/>
+        </scene>
+        <!--Main Tab Bar Controller-->
+        <scene sceneID="Kv8-mE-TKP">
+            <objects>
+                <tabBarController id="ySs-8F-Cj0" customClass="MainTabBarController" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="j9N-aB-hwN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ggU-QR-2t5" kind="relationship" relationship="viewControllers" id="f7Q-6d-ZJ3"/>
+                        <segue destination="NnJ-Ui-4Ag" kind="relationship" relationship="viewControllers" id="f4S-Zm-siI"/>
+                        <segue destination="akg-nv-pLT" kind="relationship" relationship="viewControllers" id="UKY-mV-jQD"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yUd-fd-oev" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="185" y="577"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="Bgt-sO-7c7">
+            <objects>
+                <viewController id="zJs-D3-7k5" customClass="WTHSettingsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BvU-nj-oHV"/>
+                        <viewControllerLayoutGuide type="bottom" id="vo2-5v-Y3Y"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rlb-A7-Ylv">
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="today_line" translatesAutoresizingMaskIntoConstraints="NO" id="bSD-ee-3al">
+                                <rect key="frame" x="0.0" y="64" width="600" height="2"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="vpt-d2-LQm">
+                                <rect key="frame" x="0.0" y="66" width="600" height="485"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WTHSettingsTableViewCell" id="DfK-pl-I3K" customClass="WTHSettingsTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DfK-pl-I3K" id="9KU-bx-AO7">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWD-ZP-xXb">
+                                                    <rect key="frame" x="20" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vdM-3J-5Ho">
+                                                    <rect key="frame" x="538" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="vdM-3J-5Ho" secondAttribute="trailing" constant="20" id="Ikt-0v-OlZ"/>
+                                                <constraint firstAttribute="centerY" secondItem="vdM-3J-5Ho" secondAttribute="centerY" id="MRn-ia-QZP"/>
+                                                <constraint firstAttribute="bottom" secondItem="vdM-3J-5Ho" secondAttribute="bottom" constant="11" id="beB-4g-rk2"/>
+                                                <constraint firstAttribute="centerY" secondItem="UWD-ZP-xXb" secondAttribute="centerY" id="kar-1t-O49"/>
+                                                <constraint firstItem="vdM-3J-5Ho" firstAttribute="top" secondItem="9KU-bx-AO7" secondAttribute="top" constant="11" id="xUd-ho-su9"/>
+                                                <constraint firstItem="UWD-ZP-xXb" firstAttribute="leading" secondItem="9KU-bx-AO7" secondAttribute="leading" constant="20" id="zF2-Cb-9ez"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="detailTitle" destination="vdM-3J-5Ho" id="94b-ot-PUN"/>
+                                            <outlet property="mainTitle" destination="UWD-ZP-xXb" id="wPk-ag-WWV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="zJs-D3-7k5" id="Vvp-9h-dxW"/>
+                                    <outlet property="delegate" destination="zJs-D3-7k5" id="Dfe-OA-uIc"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vpt-d2-LQm" secondAttribute="trailing" id="54W-YG-ebb"/>
+                            <constraint firstItem="vpt-d2-LQm" firstAttribute="leading" secondItem="rlb-A7-Ylv" secondAttribute="leading" id="J7b-jk-B1e"/>
+                            <constraint firstItem="vo2-5v-Y3Y" firstAttribute="top" secondItem="vpt-d2-LQm" secondAttribute="bottom" id="KwJ-Kq-PLl"/>
+                            <constraint firstItem="vpt-d2-LQm" firstAttribute="top" secondItem="bSD-ee-3al" secondAttribute="bottom" id="LYb-WK-OPc"/>
+                            <constraint firstItem="bSD-ee-3al" firstAttribute="leading" secondItem="rlb-A7-Ylv" secondAttribute="leading" id="bX9-7z-tB6"/>
+                            <constraint firstItem="bSD-ee-3al" firstAttribute="top" secondItem="BvU-nj-oHV" secondAttribute="bottom" id="k54-sa-Lfg"/>
+                            <constraint firstAttribute="trailing" secondItem="bSD-ee-3al" secondAttribute="trailing" id="wEx-Q3-rCc"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" image="tabbar_settings" id="cLA-wS-ORK"/>
+                    <navigationItem key="navigationItem" id="aLc-Hk-0OK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fPX-lz-xf1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1657" y="1167"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tabbar_forecast" width="23" height="22"/>
+        <image name="tabbar_settings" width="23" height="23"/>
+        <image name="tabbar_today" width="24" height="24"/>
+        <image name="today_line" width="320" height="2"/>
+    </resources>
 </document>
